--- a/css/style.css
+++ b/css/style.css
@@ -98,3 +98,48 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 720px) {
+    .header-logo {
+        font-size: 16px;
+    }
+    .header-menu li {
+        font-size: 16px;
+        text-align: right;
+    }
+
+    .wrapper {
+        width: auto;
+        margin: auto auto;
+    }
+
+    #search {
+        font-size: 16px;
+        width: 250px;
+    }
+
+    #search-lil-text,
+    #search-lil-text * {
+        font-size: 12px;
+    }
+
+    #main th {
+        display: none;
+    }
+
+    #main td:nth-child(1) { width: auto; text-align: center; font-size: 12px; }
+    #main td:nth-child(2) { width: auto; font-size: 16px; }
+    #main td:nth-child(3) { width: auto; font-size: 12px; }
+
+    #main * {
+        display: flex;
+        flex-direction: column;
+    }
+    #main td {
+        border-bottom: none;
+        border-right: none;
+    }
+    #main tbody {
+        border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+    }
+}
