--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,16 @@ main {
 }
 
 @media (max-width: 720px) {
+    .bg {
+        width: auto;
+        height: 110%;
+        position: fixed;
+        top: -5%;
+        left: -100%;
+        z-index: -10;
+        filter: blur(8px);
+        opacity: 40%;
+    }
     .header-logo {
         font-size: 16px;
     }
