--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ main {
     text-align: center;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 1024px) {
     .bg {
         width: auto;
         height: 110%;
@@ -115,6 +115,9 @@ main {
         filter: blur(8px);
         opacity: 40%;
     }
+}
+
+@media (max-width: 720px) {
     .header-logo {
         font-size: 16px;
     }
