--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,13 @@ header {
 #search-lil-text {
     display: flex;
     align-items: center;
+    flex-direction: column;
     margin: 8px 0;
     padding-bottom: 16px;
+}
+#search-lil-text span {
+    display: flex;
+    align-items: center;
 }
 #search-lil-text a {
     display: flex;
