--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ header {
     padding: 16px;
 }
 
+.goto-link {
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.3);
+}
+
 .header-logo {
     font-size: 32px;
 }
@@ -72,13 +77,15 @@ header {
 }
 
 #main td:nth-child(1),
-#main th:nth-child(1) { width: 150px; text-align: center; }
+#main th:nth-child(1) { width: 5px; }
 #main td:nth-child(2),
 #main th:nth-child(2) { width: 150px; text-align: center; }
 #main td:nth-child(3),
-#main th:nth-child(3) { width: 650px; font-size: 24px; }
+#main th:nth-child(3) { width: 150px; text-align: center; }
 #main td:nth-child(4),
-#main th:nth-child(4) { width: 150px; }
+#main th:nth-child(4) { width: 650px; font-size: 24px; }
+#main td:nth-child(5),
+#main th:nth-child(5) { width: 150px; }
 
 #search {
     font-size: 32px;
@@ -162,10 +169,11 @@ main {
         display: none;
     }
 
-    #main td:nth-child(1) { width: auto; text-align: center; font-size: 12px; }
-    #main td:nth-child(2) { width: auto; font-size: 16px; }
+    #main td:nth-child(1) { width: auto; }
+    #main td:nth-child(2) { width: auto; text-align: center; font-size: 12px; }
     #main td:nth-child(3) { width: auto; font-size: 16px; }
-    #main td:nth-child(4) { width: auto; font-size: 12px; }
+    #main td:nth-child(4) { width: auto; font-size: 16px; }
+    #main td:nth-child(5) { width: auto; font-size: 12px; }
 
     #main * {
         display: flex;
