--- a/css/style.css
+++ b/css/style.css
@@ -187,3 +187,19 @@ main {
         border-bottom: 2px solid rgba(255, 255, 255, 0.3);
     }
 }
+
+.warn {
+    background-color: rgba(255, 120, 50, 0.5);
+    padding: 16px;
+    border-radius: 32px;
+    margin-bottom: 32px;
+    text-align: center;
+}
+
+.warn h3 {
+    font-size: 48px;
+}
+
+.warn p {
+    font-size: 32px;
+}
