--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ main {
     }
 }
 
+#load-more td {
+    border-bottom: none;
+}
+
 @media (max-width: 720px) {
     .header-logo {
         font-size: 16px;
@@ -169,9 +173,15 @@ main {
         display: none;
     }
 
-    #main td:nth-child(1) { width: auto; }
-    #main td:nth-child(2) { width: auto; text-align: center; font-size: 12px; }
-    #main td:nth-child(3) { width: auto; font-size: 16px; }
+    .tag {
+        display: block;
+        border-radius: 8px;
+        font-size: 14px;
+    }
+
+    #main td:nth-child(1) { display: none; }
+    #main td:nth-child(2) { width: auto; font-size: 12px; text-align: center; }
+    #main td:nth-child(3) { width: auto; font-size: 16px; flex-direction: row; }
     #main td:nth-child(4) { width: auto; font-size: 16px; }
     #main td:nth-child(5) { width: auto; font-size: 12px; }
 
@@ -180,11 +190,13 @@ main {
         flex-direction: column;
     }
     #main td {
-        border-bottom: none;
-        border-right: none;
+        border: none;
     }
     #main tbody {
         border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+    }
+    #main tbody:last-child {
+        border-bottom: none;
     }
 }
 
